--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Login to Docker
+      uses: docker/login-action@v3.0.0
+      with:
+        username: abspayd
+        password: $DOCKER_ACCESS_TOKEN
     - name: Build the Docker image
-      run: docker login -u abspayd -p $DOCKER_ACCESS_TOKEN /
-            make docker-export
-      # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: make docker-export
