--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,6 @@ jobs:
       uses: docker/login-action@v3.0.0
       with:
         username: abspayd
-        password: $DOCKER_ACCESS_TOKEN
+        password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
     - name: Build the Docker image
       run: make docker-export
