--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           username: abspayd
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Docker buildx
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Docker buildx
