--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   setup:
     runs-on: ubuntu-latest
     steps:
@@ -20,7 +19,27 @@ jobs:
           username: abspayd
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Docker buildx
+  build:
+    runs-on: ubuntu-latest
+    needs:
+      - setup
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: abspayd/music-companion:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: Docker pull and run
+        run: echo "TODO"
