--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # - name: Build and push
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     platforms: linux/amd64,linux/arm64
-      #     push: true
-      #     tags: ${{ env.IMAGE }}:${{ env.VERSION }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ env.IMAGE }}:${{ env.VERSION }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,8 +55,12 @@ jobs:
 
 
       - name: Print IPv4
-        run:
+        run: |
           echo "${{ env.IPV4 }}"
+
+      - name: SSH
+        run: |
+          ssh ${{ env.IPV4 }} -l root
       # - name: Docker pull
       #   run: doctl compute ssh ${{ env.DROPLET_NAME }} \
       #     --ssh-command "docker pull ${{ env.IMAGE }}:${{ env.VERSION }}"
