--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Tailwindcss
-        run: npm run build
+        run: |
+          npm install -D tailwindcss
+          npm run build
       - name: Docker Login
         uses: docker/login-action@v3.0.0
         with:
