--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"scripts": {
-		"build": "tailwind -i ./assets/css/index.css -o ./static/css/output.css",
-		"watch": "tailwind -i ./assets/css/index.css -o ./static/css/output.css --watch",
-		"publish": "tailwind -i ./assets/css/index.css -o ./static/css/output.css -m"
+		"build": "tailwind -i ./css/index.css -o ./static/css/output.css",
+		"watch": "tailwind -i ./css/index.css -o ./static/css/output.css --watch",
+		"publish": "tailwind -i ./css/index.css -o ./static/css/output.css -m"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.7",
