--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.7",
 		"tailwindcss": "^3.3.5"
+	},
+	"dependencies": {
+		"alpinejs": "^3.13.3",
+		"htmx.org": "^1.9.9"
 	}
 }
