Adds templ and a working interval calculator page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
-		"tailwind:build": "npx tailwindcss -i ./web/static/css/input.css -o ./web/static/css/output.css",
-		"tailwind:build:watch": "npx tailwindcss -i ./web/static/css/input.css -o ./web/static/css/output.css --watch"
+		"tailwind:build": "npx tailwindcss -i ./views/static/css/input.css -o ./views/static/css/output.css",
+		"tailwind:build:watch": "npx tailwindcss -i ./views/static/css/input.css -o ./views/static/css/output.css --watch"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.9",
