--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Array of commands to run before each build
-pre_cmd = []
+pre_cmd = [ "npm run tailwind:build", "templ generate" ]
 # Just plain old shell command. You could use `make` as well.
 cmd = "go build -o ./tmp/main ./cmd/server"
 # Array of commands to run after ^C
@@ -17,17 +17,17 @@ bin = "tmp/main"
 # Customize binary, can setup environment variables when run your app.
 full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
 # Watch these filename extensions.
-include_ext = ["go", "tpl", "tmpl", "html"]
+include_ext = ["go", "tpl", "tmpl", "templ", "html"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["assets", "tmp","node_modules"]
+exclude_dir = ["assets","tmp","node_modules"]
 # Watch these directories if you specified.
 include_dir = []
 # Watch these files.
-include_file = []
+include_file = [ "views/static/css/input.css"]
 # Exclude files.
 exclude_file = []
 # Exclude specific regular expressions.
-exclude_regex = ["_test\\.go"]
+exclude_regex = ["_test.go", ".*_templ.go"]
 # Exclude unchanged files.
 exclude_unchanged = true
 # Follow symlink for directories
@@ -39,7 +39,7 @@ poll = false
 # Poll interval (defaults to the minimum interval of 500ms).
 poll_interval = 500 # ms
 # It's not necessary to trigger build each time file changes if it's too frequent.
-delay = 0 # ms
+delay = 1000 # ms
 # Stop running old binary when build errors occur.
 stop_on_error = true
 # Send Interrupt signal before killing process (windows does not support this feature)
