--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,17 +32,18 @@ jobs:
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to DigitalOcean 
-        uses: digitalocean/action-doctl@v2.5.1
-        with:
-          token: ${{ secrets.DIGITALOCEAN_TOKEN }}
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Login to DigitalOcean 
+  #       uses: digitalocean/action-doctl@v2.5.1
+  #       with:
+  #         token: ${{ secrets.DIGITALOCEAN_TOKEN }}
 
-      - name: Pull and run Docker image
-        run: |
-          doctl compute ssh music-guide --ssh-command \
-            "docker pull ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} &&
-          docker run -d -it --rm -p ${{ env.PORT }}:${{ env.PORT }} --name ${{ env.CONTAINER_NAME }} \
-            ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
+  #     - name: Pull and run Docker image
+  #       run: |
+  #         doctl compute ssh music-guide --ssh-command \
+  #           "docker pull ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} &&
+  #         docker run -d -it --rm -p ${{ env.PORT }}:${{ env.PORT }} --name ${{ env.CONTAINER_NAME }} \
+  #           ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
