--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI
 
 on:
   push:
@@ -13,8 +13,23 @@ env:
   PORT: 3000
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23.x'
+
+      - name: Install dependencies
+        run: go get ./pkg/app
+
+      - name: Run tests
+        run: go test -v ./...
+  
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -31,6 +46,18 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: Login to DigitalOcean
+          uses: digitalocean/action-doctl@2.5.1
+          with:
+            token: ${{ secrets.DIGITALOCEAN_TOKEN }}
+
+        - name: Login DigitalOcean to Docker
+          run: doctl
 
   # deploy:
   #   runs-on: ubuntu-latest
